// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TokenTransfers.vue Should display fomatted amounts if info is present on token contract 1`] = `
<div class="v-data-table theme--light">
  <div class="v-data-table__wrapper">
    <table>
      <colgroup>
        <col class="">
        <col class="">
        <col class="">
        <col class="">
      </colgroup>
      <thead class="v-data-table-header">
        <tr>
          <th role="columnheader" scope="col" aria-label="From: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>From</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
          <th role="columnheader" scope="col" aria-label="To: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>To</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
          <th role="columnheader" scope="col" aria-label="Token: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Token</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
          <th role="columnheader" scope="col" aria-label="Amount: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Amount</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
        </tr>
      </thead>
      <tbody>
        <tr class="">
          <td class="text-start">
            <hash-link-stub withtokenname="true" withname="true" fullhash="true" hash="0xC056255e6B1E6001852f9f20587A964cb89418e7" type="address"></hash-link-stub>
          </td>
          <td class="text-start">
            <hash-link-stub withname="true" fullhash="true" hash="0x4f6742bADB049791CD9A37ea913f2BAC38d01279" type="address"></hash-link-stub>
          </td>
          <td class="text-start">
            <hash-link-stub withtokenname="true" withname="true" hash="0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48" type="address"></hash-link-stub>
          </td>
          <td class="text-start"><span>
            0.1 ETL
        </span></td>
        </tr>
        <tr class="">
          <td class="text-start">
            <hash-link-stub withtokenname="true" withname="true" fullhash="true" hash="0xC056255e6B1E6001852f9f20587A964cb89418e7" type="address"></hash-link-stub>
          </td>
          <td class="text-start">
            <hash-link-stub withname="true" fullhash="true" hash="0x4f6742bADB049791CD9A37ea913f2BAC38d01279" type="address"></hash-link-stub>
          </td>
          <td class="text-start">
            <hash-link-stub withtokenname="true" withname="true" hash="0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48" type="address"></hash-link-stub>
          </td>
          <td class="text-start"><span>
            0.1 ETL
        </span></td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`TokenTransfers.vue Should display token transfers 1`] = `
<div class="v-data-table theme--light">
  <div class="v-data-table__wrapper">
    <table>
      <colgroup>
        <col class="">
        <col class="">
        <col class="">
        <col class="">
      </colgroup>
      <thead class="v-data-table-header">
        <tr>
          <th role="columnheader" scope="col" aria-label="From: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>From</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
          <th role="columnheader" scope="col" aria-label="To: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>To</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
          <th role="columnheader" scope="col" aria-label="Token: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Token</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
          <th role="columnheader" scope="col" aria-label="Amount: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Amount</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
        </tr>
      </thead>
      <tbody>
        <tr class="">
          <td class="text-start">
            <hash-link-stub withtokenname="true" withname="true" fullhash="true" hash="0xC056255e6B1E6001852f9f20587A964cb89418e7" type="address"></hash-link-stub>
          </td>
          <td class="text-start">
            <hash-link-stub withname="true" fullhash="true" hash="0x4f6742bADB049791CD9A37ea913f2BAC38d01279" type="address"></hash-link-stub>
          </td>
          <td class="text-start">
            <hash-link-stub withtokenname="true" withname="true" hash="0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48" type="address"></hash-link-stub>
          </td>
          <td class="text-start"><span>
            100000000000000000
        </span></td>
        </tr>
        <tr class="">
          <td class="text-start">
            <hash-link-stub withtokenname="true" withname="true" fullhash="true" hash="0xC056255e6B1E6001852f9f20587A964cb89418e7" type="address"></hash-link-stub>
          </td>
          <td class="text-start">
            <hash-link-stub withname="true" fullhash="true" hash="0x4f6742bADB049791CD9A37ea913f2BAC38d01279" type="address"></hash-link-stub>
          </td>
          <td class="text-start">
            <hash-link-stub withtokenname="true" withname="true" hash="0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48" type="address"></hash-link-stub>
          </td>
          <td class="text-start"><span>
            100000000000000000
        </span></td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
